# ComfyUI-ADLX-Monitor

./: .gitignore  CHANGELOG.md  README.md  __init__.py  adlx_server.py  pack_plugin.py  pyproject.toml  requirements.txt
docs/: predictor_explained_EN.md  windows_amd_telemetry.md
providers/: __init__.py  amd.py  base.py  config_store.py  system_utils.py
web/: adlx_monitor.css  adlx_monitor.js  adlx_panel.js  adlx_predictor.js
